integrate modularized jaxb-api
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>