@@ -163,11 +163,32 @@ holder.
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-compile</id>
+                                <configuration>
+                                    <compilerArgs>
+                                        <arg>--add-modules</arg>
+                                        <arg>java.xml.bind</arg>
+                                        <arg>--upgrade-module-path</arg>
+                                        <arg>${endorsed.dir}</arg>
+                                    </compilerArgs>
+                                    <verbose>true</verbose>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <forkCount>1</forkCount>
                             <reuseForks>true</reuseForks>
-                            <argLine>--add-reads java.base=java.desktop</argLine>
+                            <argLine>
+                                --add-reads java.base=java.desktop
+                                --add-modules java.xml.bind
+                                --upgrade-module-path ${endorsed.dir}</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
